--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         }
 
         body {
-            background-color: #666666
+            background-color:#FFD0DA;
+            background-image: url(tks2.jpg);
         }
 
         .profile {
@@ -93,7 +94,6 @@
         .wrap > a:hover{
             background-color: #f2f2f2;
             color: #2f352a;
-
         }
     </style>
 
