--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- 웹페이지 보이지는 않지만, 필요한 설정을 해두는 곳이에요.
-    우리가 집을 위해 미리 생각 해놓은 것을 적어두는 곳이라고 할 수 있죠!-->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,12 +14,10 @@
         * {
             font-family: "Pretendard",serif;
         }
-
         body {
-            background-color:#FFD0DA;
+            background-color:white;
             background-image: url(tks2.jpg);
-        }
-
+                }
         .profile {
             width: 100px;
             height: 100px;
@@ -34,69 +30,76 @@
             background-position: center;
             background-size: cover;
         }
-
         .main {
-            color: #ffffff;
-            font-size: 20px;
-
+            color : #000000;
+            font-size: 18px;
+            size : 20px;
             margin-top: 30px;
             margin-bottom: 10px;
         }
-
         .sub {
-            color: #ffffff;
+            color : #000000;
             font-size: 14px;
-
+            font-weight: 400;
+            size : 14px;
+            
             margin-top: 0px;
             margin-bottom: 30px;
         }
-
-        .wrap{
-            /*박스 중앙정렬*/
-
-            /*박스 설정 
-            background-color: green;
-            */
-
+        .wrap {
             width: 300px;
             margin: 30px auto 0px auto;
 
-            /*박스 내부 중앙정렬*/
-            display: flex;             
+            display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
         }
+        .bigbutton {
+            width: 320px;
+            height: 55px;
+            border-radius: 100px;
+            background-color: white;
+            margin-bottom: 16px;
 
-        .wrap > a {
-            width: 300px;
-            height: 50px;
-
-            background-color: #ffffff;
-            border-radius: 50px;
-
-            margin-bottom: 10px;
-            
             font-size: 14px;
             font-weight: bold;
-            color: #7c8b6e;
-
-            display: flex;             
+            color:#000000;
+            display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            text-decoration: none;
+            box-shadow: 3px 3px 5px 0px black;
+        }
+        .minibutton {
+            width: 152px;
+            height: 55px;
+            border-radius: 100px;
+            background-color: white;
 
+            font-size: 14px;
+            font-weight: bold;
+            color:#000000;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
             text-decoration: none;
 
             box-shadow: 3px 3px 5px 0px black;
+            margin: 0px 8px 17px 8px;
         }
-
-        .wrap > a:hover{
+        .buttons {
+            display: flex;
+        }
+        .wrap > a:hover {
             background-color: #f2f2f2;
-            color: #2f352a;
+        }
+        .buttons > a:hover {
+            background-color: #f2f2f2;
         }
     </style>
-
 </head>
 <body>
     <div class="wrap">
@@ -104,14 +107,14 @@
         <h1 class="main">바로가기</h1>
         <p class="sub">김소하_퍼스트씨앤디</p>
 
-        <a target="_blank" href="https://firstcorea.daouoffice.com/app/home">다우 홈</a>
-        <a target="_blank" href="https://www.youtube.com/">유튜브</a>
-        <a target="_blank" href="https://www.notion.so/5e81dd8bd1494b2fb7e607aa28a10d8c">노션 캘린더</a>
-        <a target="_blank" href="https://onedrive.live.com/?authkey=%21AlS6SP5WYOy13gE&id=E1DED88327E4B288%2121891&cid=E1DED88327E4B288&mid=4092A5D483C305AC%21175&mcid=4092A5D483C305AC&sd=1">원드라이브</a>
-        <a target="_blank" href="https://www.naver.com/">네이버</a>
-    </div>
+        <div class="buttons">
+            <a class="minibutton"  target="_blank" href="https://www.notion.so/5e81dd8bd1494b2fb7e607aa28a10d8c">노션 캘린더</a>
+            <a class="minibutton"  target="_blank" href="https://www.youtube.com/">유튜브</a></div>
+
+        <a class="bigbutton"target="_blank" href="https://firstcorea.daouoffice.com/app/home">다우 홈</a>
+        <a class="bigbutton"target="_blank" href="https://onedrive.live.com/?authkey=%21AlS6SP5WYOy13gE&id=E1DED88327E4B288%2121891&cid=E1DED88327E4B288&mid=4092A5D483C305AC%21175&mcid=4092A5D483C305AC&sd=1">원드라이브</a>
+        <a class="bigbutton"target="_blank" href="https://www.naver.com/">네이버</a>
+
 
 </body>
 </html>
-
-
